# Bayesian-Inference

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
notebooks/ch01_dynamical_systems/: SIR_Identifiable.ipynb  SIR_models.ipynb  SIR_nonIdentifiable.ipynb
src/dynamical_systems/: SIR_Identifiable.py  SIR_models.py
