[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesian-inference"
version = "0.1.0"
description = "Static Bayesian inference for dynamical systems and related models"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "dynamical_systems"
]